--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "dev:playground": "node ./scripts/dev.mjs",
     "preplayground": "cd playground && npm ci --ignore-scripts || (exit 0)",
     "playground": "run-p dev:*",
-    "artifact:playground": "node --input-type=module -e \"(await import('./playground/scripts/pages.mjs')).bundleDeployables('./pages-build')\"",
-    "artifact:pages": "npm run build && npm run artifact:playground",
+    "artifact:playground": "node ./playground/scripts/pages.mjs",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "vitest run --coverage",
     "test:playwright:nobuild": "cd e2e && npm run playwright:docker --",
